Partial fix for method ambiguity.